2005-03-16  Andreas Kupries <andreask@activestate.com>

	* ldap.tcl (ldap::asnGetInteger): Fixed [SF Tcllib Bug 1164663], a
	  copy/paste bug in the definition of this procedure. It belongs
	  into the ldap namespace, not the asn namespace.

2005-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ldap.tcl: Reformatted to get clean indentation, also trimmed
	  trailing whitespace.

2005-02-15  Michael Schlenker <mic42@users.sourceforge.net>

	* ldap.tcl: Fixed various issue with signed/unsigned integers in
	  length and integer encoding/decoding, by crossporting the 64-bit
	  aware integer and length code from the asn module.
	
2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-09-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ldap.tcl: Fixed expr'essions without braces.

2004-04-27  Andreas Kupries  <andreask@activestate.com>

	* ldap.man: small fixes in the docs, additional example for
	  searches and search result processing.

	* New module: Provided to us by Joechen Loewer <loewerj@web.de>.
	* Added doctools documentation.